🎨 core: Cleanup.